# ifs_autotune

./: .gitignore  README.md  dev.py  migrate_schema_to_hashed_model_id.py
ParquetReader/: ParquetReader.csproj  Program.cs
backend/: artifact_retention.py  combine_var_hist.py  common_sce_utils.py  dataset_utils.py  db_init.py  extract_compare.py  log_ifs_version.py  migrate_bigpopa_db.py  ml_driver.py  ml_method.py  ml_progress.py  model_run_store.py  model_setup.py  model_status.py  populate_static_layers.py  prepare_coeff_param.py  pyproject.toml  run_ifs.py  trend_analysis.py  trend_dataset_options.py  validate_ifs.py
backend/analysis/: __init__.py  analyze_latest_runs.py  latest_runs.py  plotting.py  rolling_metrics.py  run_history.py  trend_dataset_options.py  trend_summary.py
backend/app/: ifscheck.py  main.py  metrics.py  runner.py  settings.py
backend/app/storage/: db.py
backend/bigpopa_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/db/: __init__.py  ifs_metadata.py  input_profiles.py  migration.py  schema.py
backend/ifs/: __init__.py  combine_var_hist.py  extract_compare.py  prepare_coeff_param.py  run_ifs.py  validate_ifs.py
backend/model_setup/: dataset_utils.py
backend/optimization/: acquisition_functions.py  active_learning.py  ensemble_training.py  surrogate_models.py  utils.py
backend/runtime/: __init__.py  artifact_retention.py  dataset_utils.py  ml_driver.py  ml_method.py  ml_progress.py  model_run_store.py  model_setup.py
backend/tests/: test_health.py  test_run_stub.py
backend/tools/: __init__.py
backend/tools/db/: __init__.py  backfill_ml_tracking.py  bigpopa_schema.py  migrate_bigpopa_db.py
desktop/: main.js  package-lock.json  package.json  preload.js
desktop/input/template/: StartingPointTable_clean.xlsx  bigpopa_clean.db
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  ML_PROCESS.md  SEARCH_SPACE.md  WORKFLOW.md
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  InputProfilesPanel.tsx  MLProgressChart.tsx  api.ts  global.d.ts  styles.css
scripts/: Run_BIGPOPA.bat  Run_BIGPOPA.ps1  Run_BIGPOPA_Trend_Analysis.bat  Run_BIGPOPA_Trend_Analysis.ps1  Setup_BIGPOPA.bat  Setup_BIGPOPA.ps1
tests/: test_analysis_latest_runs.py  test_artifact_retention.py  test_backend_root_wrappers.py  test_bigpopa_db_migration.py  test_common_sce_utils.py  test_db_package_smoke.py  test_extract_compare.py  test_input_profiles.py  test_ml_driver_sampling.py  test_ml_method_runtime.py  test_ml_progress.py  test_model_setup_dataset_detection.py  test_profile_only_validation_contract.py  test_run_ifs.py  test_trend_analysis.py  test_trend_dataset_options.py
