[project]
name = "bigpopa-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic",
  "pydantic-settings",
  "pytest",
  "httpx",
  "pandas",
  "openpyxl",
  "numpy",
  "matplotlib",
  "scikit-learn",
  "torch",
]

[tool.pytest.ini_options]
pythonpath = ["."]

# Keep editable installs resilient by discovering real packages on disk.
# We intentionally do not list app/tests because those directories do not exist.
# Declaring non-existent package directories causes `pip install -e .` to fail.
[tool.setuptools]
py-modules = ["extract_compare", "ml_driver", "ml_progress", "model_setup", "run_ifs", "trend_analysis", "trend_dataset_options", "validate_ifs"]

[tool.setuptools.packages.find]
where = ["."]
include = ["optimization*", "analysis*", "db*", "runtime*", "ifs*"]
exclude = ["*.egg-info", "*.egg-info.*"]
